fix spacing on mobile, remove social share btns on feeds, display pin-it btns only on imgs inside posts, reposition category links

--- a/less/style-responsive.less
+++ b/less/style-responsive.less
@@ -454,7 +454,12 @@ and (orientation : portrait) {
 	.post h4 {
 		text-align: center;
 	}
+	article div.col-sm-7 {
+	  padding: 10px 3px !important;
+
+	}
 	ul.post-social {
+		display: none !important;
 		width: 100%;
 		padding: 20px 100px;
 	}
@@ -470,6 +475,7 @@ and (orientation : portrait) {
 		top: 30px;
 	}
 	.specialMd ul.post-social {
+		display: none !important;
 		width: 100% !important;
 		position: absolute !important;
 		right: 0px !important;
